// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ThroughEdge /> if it is selected renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <svg>
        <path
          class="stroke-first-500 fill-[none] stroke-[1] custom-animation"
          d="M559.7142857142857,205 C559.7142857142857,225 628.2857142857143,225 628.2857142857143,245"
          id="111-first"
          style="stroke: black; stroke-width: 3; stroke-dasharray: 0;"
        />
        <defs>
          <marker
            id="through-arrow-111"
            markerHeight="10px"
            markerUnits="strokeWidth"
            markerWidth="10px"
            orient="180deg"
            refX="100"
            refY="0"
            stroke-linecap="round"
            viewBox="0 0 200 200"
          >
            <path
              class="stroke-[15] stroke-first-500 fill-transparent"
              d="M 20,20 100,180 180,20 M 20,20 H 180"
              style="stroke-linecap: round; stroke-linejoin: round;"
            />
          </marker>
        </defs>
        <path
          class="stroke-first-500 fill-[none] stroke-[1] custom-animation"
          d="M628.2857142857143,245 C628.2857142857143,225 789.6428571428571,225 789.6428571428571,205"
          id="111-second"
          marker-end="url(#through-arrow-111)"
          style="stroke: black; stroke-width: 3; stroke-dasharray: 0;"
        />
        <path
          class="fill-[none] stroke-[15] stroke-transparent"
          d="M628.2857142857143,245 C628.2857142857143,225 789.6428571428571,225 789.6428571428571,205"
          id="111-second-wider"
        />
        <foreignobject
          class="h-10 w-10"
          x="789.6428571428571"
          y="205"
        >
          MockRemoveEdgeButton
          edgeId: 111
        </foreignobject>
      </svg>
    </div>
  </body>,
  "container": <div>
    <svg>
      <path
        class="stroke-first-500 fill-[none] stroke-[1] custom-animation"
        d="M559.7142857142857,205 C559.7142857142857,225 628.2857142857143,225 628.2857142857143,245"
        id="111-first"
        style="stroke: black; stroke-width: 3; stroke-dasharray: 0;"
      />
      <defs>
        <marker
          id="through-arrow-111"
          markerHeight="10px"
          markerUnits="strokeWidth"
          markerWidth="10px"
          orient="180deg"
          refX="100"
          refY="0"
          stroke-linecap="round"
          viewBox="0 0 200 200"
        >
          <path
            class="stroke-[15] stroke-first-500 fill-transparent"
            d="M 20,20 100,180 180,20 M 20,20 H 180"
            style="stroke-linecap: round; stroke-linejoin: round;"
          />
        </marker>
      </defs>
      <path
        class="stroke-first-500 fill-[none] stroke-[1] custom-animation"
        d="M628.2857142857143,245 C628.2857142857143,225 789.6428571428571,225 789.6428571428571,205"
        id="111-second"
        marker-end="url(#through-arrow-111)"
        style="stroke: black; stroke-width: 3; stroke-dasharray: 0;"
      />
      <path
        class="fill-[none] stroke-[15] stroke-transparent"
        d="M628.2857142857143,245 C628.2857142857143,225 789.6428571428571,225 789.6428571428571,205"
        id="111-second-wider"
      />
      <foreignobject
        class="h-10 w-10"
        x="789.6428571428571"
        y="205"
      >
        MockRemoveEdgeButton
        edgeId: 111
      </foreignobject>
    </svg>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<ThroughEdge /> if texts are shown on the edges renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <svg>
        <path
          class="stroke-first-500 fill-[none] stroke-[1] custom-animation"
          d="M559.7142857142857,205 C559.7142857142857,225 628.2857142857143,225 628.2857142857143,245"
          id="111-first"
        />
        <defs>
          <marker
            id="through-arrow-111"
            markerHeight="10px"
            markerUnits="strokeWidth"
            markerWidth="10px"
            orient="180deg"
            refX="100"
            refY="0"
            stroke-linecap="round"
            viewBox="0 0 200 200"
          >
            <path
              class="stroke-[15] stroke-first-500 fill-transparent"
              d="M 20,20 100,180 180,20 M 20,20 H 180"
              style="stroke-linecap: round; stroke-linejoin: round;"
            />
          </marker>
        </defs>
        <path
          class="stroke-first-500 fill-[none] stroke-[1] custom-animation"
          d="M628.2857142857143,245 C628.2857142857143,225 789.6428571428571,225 789.6428571428571,205"
          id="111-second"
          marker-end="url(#through-arrow-111)"
        />
        <path
          class="fill-[none] stroke-[15] stroke-transparent"
          d="M628.2857142857143,245 C628.2857142857143,225 789.6428571428571,225 789.6428571428571,205"
          id="111-second-wider"
        />
        <text>
          <textpath
            href="#111-first"
            startOffset="0"
            style="font-size: 12px; fill: #000;"
          >
            through
          </textpath>
        </text>
      </svg>
    </div>
  </body>,
  "container": <div>
    <svg>
      <path
        class="stroke-first-500 fill-[none] stroke-[1] custom-animation"
        d="M559.7142857142857,205 C559.7142857142857,225 628.2857142857143,225 628.2857142857143,245"
        id="111-first"
      />
      <defs>
        <marker
          id="through-arrow-111"
          markerHeight="10px"
          markerUnits="strokeWidth"
          markerWidth="10px"
          orient="180deg"
          refX="100"
          refY="0"
          stroke-linecap="round"
          viewBox="0 0 200 200"
        >
          <path
            class="stroke-[15] stroke-first-500 fill-transparent"
            d="M 20,20 100,180 180,20 M 20,20 H 180"
            style="stroke-linecap: round; stroke-linejoin: round;"
          />
        </marker>
      </defs>
      <path
        class="stroke-first-500 fill-[none] stroke-[1] custom-animation"
        d="M628.2857142857143,245 C628.2857142857143,225 789.6428571428571,225 789.6428571428571,205"
        id="111-second"
        marker-end="url(#through-arrow-111)"
      />
      <path
        class="fill-[none] stroke-[15] stroke-transparent"
        d="M628.2857142857143,245 C628.2857142857143,225 789.6428571428571,225 789.6428571428571,205"
        id="111-second-wider"
      />
      <text>
        <textpath
          href="#111-first"
          startOffset="0"
          style="font-size: 12px; fill: #000;"
        >
          through
        </textpath>
      </text>
    </svg>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<ThroughEdge /> if the mouse hovers on the edge renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <svg>
        <path
          class="stroke-first-500 fill-[none] stroke-[1] custom-animation"
          d="M559.7142857142857,205 C559.7142857142857,225 628.2857142857143,225 628.2857142857143,245"
          id="111-first"
          style="stroke: black; stroke-width: 3; stroke-dasharray: 0;"
        />
        <defs>
          <marker
            id="through-arrow-111"
            markerHeight="10px"
            markerUnits="strokeWidth"
            markerWidth="10px"
            orient="180deg"
            refX="100"
            refY="0"
            stroke-linecap="round"
            viewBox="0 0 200 200"
          >
            <path
              class="stroke-[15] stroke-first-500 fill-transparent"
              d="M 20,20 100,180 180,20 M 20,20 H 180"
              style="stroke-linecap: round; stroke-linejoin: round;"
            />
          </marker>
        </defs>
        <path
          class="stroke-first-500 fill-[none] stroke-[1] custom-animation"
          d="M628.2857142857143,245 C628.2857142857143,225 789.6428571428571,225 789.6428571428571,205"
          id="111-second"
          marker-end="url(#through-arrow-111)"
          style="stroke: black; stroke-width: 3; stroke-dasharray: 0;"
        />
        <path
          class="fill-[none] stroke-[15] stroke-transparent"
          d="M628.2857142857143,245 C628.2857142857143,225 789.6428571428571,225 789.6428571428571,205"
          id="111-second-wider"
        />
      </svg>
    </div>
  </body>,
  "container": <div>
    <svg>
      <path
        class="stroke-first-500 fill-[none] stroke-[1] custom-animation"
        d="M559.7142857142857,205 C559.7142857142857,225 628.2857142857143,225 628.2857142857143,245"
        id="111-first"
        style="stroke: black; stroke-width: 3; stroke-dasharray: 0;"
      />
      <defs>
        <marker
          id="through-arrow-111"
          markerHeight="10px"
          markerUnits="strokeWidth"
          markerWidth="10px"
          orient="180deg"
          refX="100"
          refY="0"
          stroke-linecap="round"
          viewBox="0 0 200 200"
        >
          <path
            class="stroke-[15] stroke-first-500 fill-transparent"
            d="M 20,20 100,180 180,20 M 20,20 H 180"
            style="stroke-linecap: round; stroke-linejoin: round;"
          />
        </marker>
      </defs>
      <path
        class="stroke-first-500 fill-[none] stroke-[1] custom-animation"
        d="M628.2857142857143,245 C628.2857142857143,225 789.6428571428571,225 789.6428571428571,205"
        id="111-second"
        marker-end="url(#through-arrow-111)"
        style="stroke: black; stroke-width: 3; stroke-dasharray: 0;"
      />
      <path
        class="fill-[none] stroke-[15] stroke-transparent"
        d="M628.2857142857143,245 C628.2857142857143,225 789.6428571428571,225 789.6428571428571,205"
        id="111-second-wider"
      />
    </svg>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
